--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.28.1",
     "@paypal/react-paypal-js": "^8.8.3",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
     "next": "15.4.5",
     "react": "19.1.0",
